# Crawling

./: .env.example  .gitignore  .python-env  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_jupyter.txt
app/: main.py
dags/: embedding_init_dag.py  extract_dag.py  gnn_baseline_eval_dag.py  gnn_training_dag.py  gnn_trainset_creation_dag.py  graph2db_dag.py  keyword_embedding_snapshot_dag.py  keyword_extract_dag.py  load2db_dag.py  naver_title_backfill_dag.py  news2minio_daily_dag.py  news2minio_full_dag.py  news_analysis_daily_finalize_dag.py  news_analysis_integration_dag.py  news_dag.py  news_ingestion_integration_hourly_dag.py  operational_health_check_daily_dag.py  recommendation_news_path_metrics_hourly_dag.py  recommendation_popular_snapshot_dag.py  refinement_dag.py  refinement_full_dag.py  sentiment_dag.py  stock_crawling_dag.py  stock_embedding_dag.py  stock_extract_dag.py  stocks_insert_dag.py  table_init_dag.py
dockerfile/: Dockerfile.jupyter  Dockerfile.mlflow  airflow.Dockerfile  gnn.Dockerfile  jupyter.Dockerfile  mlflow.Dockerfile  recommend-api.Dockerfile
docs/: gnn_lifecycle_current_state.md  gnn_temporal_split_migration_plan.md  gnn_test_plan.md  live_readonly_test_plan.md  news_integration_hourly_dag_module_design.md  news_integration_hourly_migration_plan.md  offline_artifact_test_plan.md  operational_health_check_dag.md  recommendation_api_design_draft.md  recommendation_api_operations_draft.md  test_inventory.md  testing_overview.md  workflow_test_plan.md
init-scripts/: init_db.sql  (+1 more)
(+115 files in other folders)
